web/book/tests/snapshots/snapshot__transforms__aggregate-2.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\nderive [avg_sal = average salary]\n"
---
SELECT
  *,
  AVG(salary) OVER () AS avg_sal
FROM
  employees

