web/book/tests/snapshots/snapshot__transforms__join-2.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\njoin positions [==emp_no]\n"
---
SELECT
  employees.*,
  positions.*
FROM
  employees
  JOIN positions ON employees.emp_no = positions.emp_no

